add get-cover API
